chore(renovate): rebase lock file and vulnerabilities asao

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -68,10 +68,13 @@
   "lockFileMaintenance": {
     "branchPrefix": "dependencies/lock-file/",
     "automerge": false,
-    "enabled": true
+    "enabled": true,
+    "rebaseWhen": "behind-base-branch"
   },
   "vulnerabilityAlerts": {
-    "enabled": true
+    "automerge": false,
+    "enabled": true,
+    "rebaseWhen": "behind-base-branch"
   },
   "semanticCommitType": "chore",
   "assignees": ["C0ZEN"],
